--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,5 +7,8 @@
     <string name="background_view_img">Background view image</string>
     <string name="downloading_video">Baixando o vídeo&#8230;</string>
     <string name="toast_no_connection">Verifique sua conexão</string>
+    <string name="act_continuous_focus">Ativar foco contínuo</string>
+    <string name="deact_continuous_focus">Desativar foco contínuo</string>
+    <string name="trigger_auto_focus">Ativar foco automático</string>
     
 </resources>
